# PBBFMM3D

./: .gitignore  MANIFEST.in  flake.nix  pyproject.toml  setup.py
include/: H2_3D_Tree.hpp  compute.hpp
python/: benchmark.py  kernel_Matern12.hpp  kernel_Matern32.hpp  kernel_Matern52.hpp  kernel_MaternInf.hpp  matern.py  mykernel_python.hpp
src/: FMMCompute.cpp  FMMTree.cpp  H2_3D_Tree.cpp
src/pbbfmm3d/: __init__.py  kernels.py  pbbfmm3d.py
