[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pbbfmm3d"
version = "1.0.0"
authors = [
    { name = "Ruoxi Wang", email = "ruoxi.rw@gmail.com" },
    { name = "Chao Chen", email = "chenchao.nk@gmail.com" },
]
maintainers = [{ name = "Stephen Huan", email = "stephen.huan@cgdct.moe" }]
description = "Parallel Black-box Fast Multipole Method in 3 dimensions"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: C++",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[project.urls]
Homepage = "https://github.com/ruoxi-wang/PBBFMM3D"
Repository = "https://github.com/ruoxi-wang/PBBFMM3D"
Issues = "https://github.com/ruoxi-wang/PBBFMM3D/issues"
